# distance-estimator

./: .gitignore  CLUSTER_TEST.md  CODE_MAP.md  NN_MODEL.md  OUTLINE.md  PLAN.md  README.md  apply_model.py  apply_nn.pbs  apply_nn.py  assemble_features.pbs  assemble_features.py  assemble_hogg18.pbs  assemble_hogg18.py  build_pixel_mask.pbs  build_pixel_mask.py  check_pixel_flags.py  cluster_test.py  data.ipynb  distance_estimation copy.ipynb  distance_estimation.ipynb  glimpse.py  hogg18_cluster_test.pbs  hogg18_cluster_test.py  hogg2018.fits  prepare_cluster_spectra.pbs  prepare_cluster_spectra.py  pyproject.toml  results_nn_studentt_sweep.ipynb  run_cluster_test.py  run_clusters.pbs  run_clusters.py  run_full_gadi.pbs  run_full_gadi.py  spphot_eval.py  spphot_plots.py  sync_wandb.pbs  train_nn.pbs  train_nn.py  train_v2.pbs  (+5 more)
legacy/: README.md  assemble_features.pbs  build_from_parquet.py  check_pixel_flags.py
notebooks/: cluster.ipynb  data.ipynb  distance_estimation copy.ipynb  distance_estimation.ipynb  distance_estimation_full_results.ipynb  hogg18_reproduction.ipynb  results.ipynb  results_nn.ipynb  results_nn_studentt.ipynb  results_nn_studentt_sweep copy.ipynb  results_nn_studentt_sweep.ipynb  vvv.ipynb
spphot/: __init__.py  clusters.py  data.py  datasets.py  eval.py  linear.py  nn.py  plots.py  v2.py
tests/: checks.py  make_fixture.py  smoke_test.sh
